b2: a first successfully run test

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,4 +96,7 @@ dependencies {
     androidTestImplementation "androidx.test.ext:junit:$ext_junit_version"
     androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
+
+    // StandardTestDispatcher and Dispatchers.Main
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.3"
 }
