--- a/app/build.gradle
+++ b/app/build.gradle
@@ -105,4 +105,9 @@ dependencies {
     testImplementation "androidx.arch.core:core-testing:2.2.0"
     // Mockito
     testImplementation "org.mockito.kotlin:mockito-kotlin:4.0.0"
+    // InstantTaskExecutorRule, for androidTest source set
+    androidTestImplementation "androidx.arch.core:core-testing:2.2.0"
+    // Mockito for AndroidTest
+    androidTestImplementation "org.mockito:mockito-android:4.11.0"
+    androidTestImplementation "org.mockito.kotlin:mockito-kotlin:4.0.0"
 }
