--- a/app/build.gradle
+++ b/app/build.gradle
@@ -110,4 +110,6 @@ dependencies {
     // Mockito for AndroidTest
     androidTestImplementation "org.mockito:mockito-android:4.11.0"
     androidTestImplementation "org.mockito.kotlin:mockito-kotlin:4.0.0"
+    // MockWebServer
+    testImplementation "com.squareup.okhttp3:mockwebserver:4.10.0"
 }
