--- a/app/build.gradle
+++ b/app/build.gradle
@@ -112,4 +112,6 @@ dependencies {
     androidTestImplementation "org.mockito.kotlin:mockito-kotlin:4.0.0"
     // MockWebServer
     testImplementation "com.squareup.okhttp3:mockwebserver:4.10.0"
+    // createComposeRule()
+    debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
 }
